--- a/MySQL-Docker/.env-example
+++ b/MySQL-Docker/.env-example
@@ -1,4 +1,5 @@
-MYSQL_ROOT_PASSWORD: senha
-MYSQL_DATABASE: base_de_dados
-MYSQL_USER: usuario
-MYSQL_PASSWORD: senha
+MYSQL_ROOT_PASSWORD = 'senha'
+MYSQL_DATABASE = 'base_de_dados'
+MYSQL_USER =  'usuario'
+MYSQL_PASSWORD = 'senha'
+MYSQL_HOST = 'localhost'
